# sextant

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  MANUAL-QA.md  Makefile  README.md  SPEC.md  compose.yml  connections.example.toml  plan.md  sextant-spec.md  test.db
.agents/skills/done-checklist/: SKILL.md
.agents/skills/plan-task/: SKILL.md
.claude/: settings.json
.claude/skills/connect-tui/: SKILL.md
.claude/skills/db-setup/: SKILL.md
.claude/skills/plan-task/: SKILL.md
.claude/skills/workspace-check/: SKILL.md
.memory/: .gitignore
.opencode/plans/: 1781025777168-proud-panda.md
crates/sextant-cli/: Cargo.toml
crates/sextant-cli/src/: main.rs
crates/sextant-cli/tests/: e2e.rs  e2e_drivers.rs  smoke.rs
crates/sextant-cli/tests/common/: mod.rs
crates/sextant-config/: Cargo.toml
crates/sextant-config/src/: keymap.rs  lib.rs  parser.rs  paths.rs  theme.rs  validation.rs
crates/sextant-core/: Cargo.toml
crates/sextant-core/src/: lib.rs
crates/sextant-db/: Cargo.toml
crates/sextant-db/src/: connection_manager.rs  executor.rs  export.rs  import.rs  introspection.rs  lib.rs  sql.rs  url_builder.rs
crates/sextant-state/: Cargo.toml
crates/sextant-state/src/: lib.rs
crates/sextant-ui/: Cargo.toml
crates/sextant-ui/src/: autocomplete.rs  editor_modal.rs  fuzzy.rs  keymap.rs  lib.rs  palette.rs  result_grid.rs  swap.rs  tree_pane.rs
docs/: coverage.md  documentation-guide.md
docs/adr/: 0001-sqlx-como-capa-de-acceso-a-datos.md  0002-concurrencia-optimista-en-commits-del-grid.md  0003-modelo-de-transacciones-hibrido-psql.md  0004-credenciales-via-keyring-del-so.md  0005-credential-store-inyectable-para-testabilidad.md  0006-menu-which-key-solo-para-el-leader.md  0007-renderizado-manual-del-grid-en-lugar-de-table.md  0008-raw-sql-para-control-de-transacciones-en-mysql.md  README.md
seeds/: mysql.sql  postgres.sql  sqlite.sql
