[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["wukong0111"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono", "json", "rust_decimal", "bigdecimal"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
csv = "1"
serde_json = "1"
