[package]
name = "sextant-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "sextant"
path = "src/main.rs"

[dependencies]
sextant-ui = { path = "../sextant-ui" }
color-eyre = "0.6"
dirs = { workspace = true }
dotenvy = "0.15"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# End-to-end TUI testing: drive the real binary through a pseudo-terminal,
# parse its ANSI output into a virtual screen, and seed/inspect databases.
portable-pty = "0.8"
vt100 = "0.15"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
sextant-core = { path = "../sextant-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
