[package]
name = "sextant-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sextant-core = { path = "../sextant-core" }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[dev-dependencies]
tempfile = "3"
