[package]
name = "sextant-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sextant-core = { path = "../sextant-core" }
sqlx = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
