[package]
name = "sextant-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sextant-core = { path = "../sextant-core" }
sextant-config = { path = "../sextant-config" }
sextant-db = { path = "../sextant-db" }
sextant-state = { path = "../sextant-state" }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tui-textarea = "0.7"
